finition de la sauvegarde avec tous les bons elements et ajout du popup pour décider de la longueur d'un réponse

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -377,8 +377,8 @@
 
 
   <button name="TESTOUILLE" onclick="console.log(get_variables_JSON())" value="TEST">Hello</button>
-  <button name="TESTOUILLE2" onclick="use_save_state({'x':answer_List})" value="23">restore</button>
-  <button name="TESTOUILLE3" onclick="console.log(Blockly.Xml.workspaceToDom(prepEditor.mBlocklyWorkspace))" value="ji">test</button>
+  <button name="TESTOUILLE2" onclick="use_save_state()" value="23">restore</button>
+  <button name="TESTOUILLE3" onclick="console.log(editor_Enonce.editor.getContents())" value="ji">test</button>
 
   <script src="js_tools/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/vendor/what-input.js" type="text/javascript" charset="utf-8"></script>
@@ -388,8 +388,8 @@
   <script type="text/javascript" src="js_tools/blockly/blockly_uncompressed.js"></script>
   <script type="text/javascript" src="js_tools/html2canvas.js"></script>
   <script type="text/javascript" src="js_tools/blockly/blocks_compressed.js"></script>
-  <script type="text/javascript" src="js_tools/blockly/msg/js/en.js"></script>
-  <script type="text/javascript" src="src/BlocklyWIMS/msg/js/en.js"></script>
+  <script type="text/javascript" src="js_tools/blockly/msg/js/fr.js"></script>
+  <script type="text/javascript" src="src/BlocklyWIMS/msg/js/fr.js"></script>
   <script type="text/javascript" src="js_tools/quill/quill.min.js"></script>
   <script src="src/ImageVariable.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/LatexImage.js" type="text/javascript" charset="utf-8"></script>
