On enleve les popups lors du changement d'onglets

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -35,14 +35,14 @@
   <div class="row">
     <div class="large-12 medium-12">
       <div class="RCl_Menu_Onglets">
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Entete" onclick="Blockly.ExternalDiv.hide(); change_onglet('Entete');">Entête</span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Enonce" onclick="Blockly.ExternalDiv.hide();change_onglet('Enonce');">Enoncé</span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Preparation" onclick="Blockly.ExternalDiv.hide();change_onglet('Preparation');update_all_view();">Préparation</span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Analyse" onclick="Blockly.ExternalDiv.hide();change_onglet('Analyse');update_analyse_answer(editor_Enonce,answer_List);update_variables_answers_view('card_Analyse_Variable',variable_List,answer_List)">Analyse</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Entete" onclick="hide_popup(); change_onglet('Entete');">Entête</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Enonce" onclick="hide_popup();change_onglet('Enonce');">Enoncé</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Preparation" onclick="hide_popup();change_onglet('Preparation');update_all_view();">Préparation</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Analyse" onclick="hide_popup();change_onglet('Analyse');update_analyse_answer(editor_Enonce,answer_List);update_variables_answers_view('card_Analyse_Variable',variable_List,answer_List)">Analyse</span>
         <!-- update_analyse_answer(editor_Enonce,answer_List); -->
         <span class="RCl_Onglet_Fake RCl_Onglet"></span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Code" onclick="Blockly.ExternalDiv.hide();change_onglet('Code'); generate_prep_code(); update_final_code();">Code</span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Sauvegarde" onclick="Blockly.ExternalDiv.hide();change_onglet('Sauvegarde');">Sauvegarde</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Code" onclick="hide_popup();change_onglet('Code'); generate_prep_code(); update_final_code();">Code</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Sauvegarde" onclick="hide_popup();change_onglet('Sauvegarde');">Sauvegarde</span>
       </div>
     </div>
 
