reglages de quelques bugs

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -42,7 +42,7 @@
         <!-- update_analyse_answer(editor_Enonce,answer_List); -->
         <span class="RCl_Onglet_Fake RCl_Onglet"></span>
         <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Code" onclick="hide_popup();change_onglet('Code'); generate_prep_code(); update_final_code();">Code</span>
-        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Sauvegarde" onclick="hide_popup();change_onglet('Sauvegarde');">Sauvegarde</span>
+        <span class="RCl_Onglet_Cache RCl_Onglet" id="RId_Onglet_Sauvegarde" onclick="hide_popup();register_type_other();change_onglet('Sauvegarde');">Sauvegarde</span>
       </div>
     </div>
 
