Extend the number of proposed answer types+options

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -169,20 +169,14 @@
           <!-- ONGLET ANALYSE -->
           <div class="RCl_Contenu_Onglet_Cache" id="RId_Contenu_Onglet_Analyse">
             <div class="row" style="margin:15px;">
-              <div id="Contenu_all_answer" class="large-9 columns callout">
-                <!-- DU TESTING COMMENCE -->
+              <div id="Contenu_all_answer" class="large-7 columns callout">
                 <div id="answer_list_analyse"></div>
-
-                <!-- DU TESTING A PRIS FIN -->
               </div>
               <div class="large-3 card">
                 <div class="card-divider" id="Rid_Analysis_Header_VarAnswers">
                   Variables & Answers
                 </div>
                 <div class="card-section" id="card_Analyse_Variable">
-                  <!--Rajouter une fonction javascript pour afficher toutes les variables -->
-
-                  <!-- DU TESTING A PRIS FIN -->
                 </div>
               </div>
             </div>
@@ -271,10 +265,10 @@
     <block type="analyse_hint">
       <field name="WIMS_EDITOR"></field>
     </block>
-    <block type="wims_change_type">
+    <!-- <block type="wims_change_type">
       <field name="VARIABLE_CHOICE"></field>
       <field name="TYPE"></field>
-    </block>
+    </block> -->
     <block type="wims_variable_editor">
       <field name = "VARIABLE_CHOICE"></field>
       <field name="WIMS_EDITOR"></field>
