--- a/distribution/laruche/index.html
+++ b/distribution/laruche/index.html
@@ -302,19 +302,19 @@
 </xml>
 
 
-  <script src="js_tools/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
-  <script src="js_tools/vendor/what-input.js" type="text/javascript" charset="utf-8"></script>
-  <script src="js_tools/vendor/foundation.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="js_tools/katex/katex.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+  <script src="js_tools/vendor/jquery.js" charset="utf-8"></script>
+  <script src="js_tools/vendor/what-input.js" charset="utf-8"></script>
+  <script src="js_tools/vendor/foundation.min.js" charset="utf-8"></script>
+  <script src="js_tools/katex/katex.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
   <!-- <script type="text/javascript" src="js_tools/blockly/blockly_uncompressed.js"></script> -->
-  <script type="text/javascript" src="js_tools/html2canvas.js"></script>
-  <script type="text/javascript" src="js_tools/blockly/blockly_compressed.js"></script>
-  <script type="text/javascript" src="js_tools/blockly/blocks_compressed.js"></script>
-  <script type="text/javascript" src="js_tools/blockly/msg/js/fr.js"></script>
-  <script type="text/javascript" src="src/BlocklyWIMS/msg/js/fr.js"></script>
-  <script type="text/javascript" src="js_tools/quill/quill.min.js"></script>
-  <script type="text/javascript" src="laruche.min.js"></script>
+  <script src="js_tools/html2canvas.js" charset="utf-8"></script>
+  <script src="js_tools/blockly/blockly_compressed.js" charset="utf-8"></script>
+  <script src="js_tools/blockly/blocks_compressed.js" charset="utf-8"></script>
+  <script src="js_tools/blockly/msg/js/fr.js" charset="utf-8"></script>
+  <script src="src/BlocklyWIMS/msg/js/fr.js" charset="utf-8"></script>
+  <script src="js_tools/quill/quill.min.js" charset="utf-8"></script>
+  <script src="laruche.min.js" charset="utf-8"></script>
   <!-- <script src="src/ImageVariable.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/LatexImage.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/AnswerImage.js" type="text/javascript" charset="utf-8"></script>
