[minor] mise en page fichiers Readme

--- a/distribution/laruche/index.html
+++ b/distribution/laruche/index.html
@@ -4,10 +4,10 @@
   <title>LaRuche - éditeur d'exercices</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="language" content="english">
+  <meta name="language" content="French">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="LaRuche is an exercise editor for the WIMS platform">
+  <meta name="description" content="LaRuche est un éditeur d'exercice pour la plateforme WIMS">
 
   <!-- Foundation style sheets -->
   <link rel="stylesheet" href="css/foundation.css"/>
@@ -20,7 +20,6 @@
 
   <!-- Customized style sheet of Quill -->
   <link rel="stylesheet" href="js_tools/quill/quill.snow-custom.css" />
-
 
 </head>
 <body>
