--- a/distribution/laruche/index.html
+++ b/distribution/laruche/index.html
@@ -305,9 +305,10 @@
   <script src="js_tools/vendor/jquery.js" charset="utf-8"></script>
   <script src="js_tools/vendor/what-input.js" charset="utf-8"></script>
   <script src="js_tools/vendor/foundation.min.js" charset="utf-8"></script>
+  <script type="text/javascript">$(document).foundation();</script>
   <script src="js_tools/katex/katex.min.js" charset="utf-8"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
-  <!-- <script type="text/javascript" src="js_tools/blockly/blockly_uncompressed.js"></script> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script> -->
+  <script src="js_tools/quill/highlight.js-master/src/highlight.js" charset="utf-8"></script>
   <script src="js_tools/html2canvas.js" charset="utf-8"></script>
   <script src="js_tools/blockly/blockly_compressed.js" charset="utf-8"></script>
   <script src="js_tools/blockly/blocks_compressed.js" charset="utf-8"></script>
