in Blockly editors remove swarm menus and change block colors

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -248,8 +248,8 @@
         <field name="WIMS_EDITOR">true</field>
       </block>
     </category>
-    <sep></sep>
-    <category name="Essaims" id="Rid_Prep_Blockly_Toolbar_Swarms"></category>
+    <!-- <sep></sep>
+    <category name="Essaims" id="Rid_Prep_Blockly_Toolbar_Swarms"></category> -->
   </xml>
 
 
