Corrected 1) a fatal bug with < and > characters in editors and 2) pb when loading answer list, was not re-establishing the on editor-change signal

--- a/LaRuche_2017/laruche/index.html
+++ b/LaRuche_2017/laruche/index.html
@@ -215,11 +215,12 @@
         <field name="VARIABLE_CHOICE"></field>
         <field name="TYPE"></field>
       </block> -->
+      <block type="text">text</block>
       <block type ="wims_comment">
-        <field name="COMMENT">Comment</field>
+        <field name="COMMENT">Comment / Commentaire / Kommentar / Comento / Comentario</field>
       </block>
       <block type="wims_variable_editor">
-        <field name = "VARIABLE_CHOICE"></field>
+        <field name="VARIABLE_CHOICE">i</field>
         <field name="WIMS_EDITOR"></field>
       </block>
       <block type="wims_editor">
@@ -268,7 +269,7 @@
       <field name="TYPE"></field>
     </block> -->
     <block type="wims_variable_editor">
-      <field name = "VARIABLE_CHOICE"></field>
+      <field name="VARIABLE_CHOICE">i</field>
       <field name="WIMS_EDITOR"></field>
     </block>
     <block type="wims_if">
