--- a/LaRuche/index.html
+++ b/LaRuche/index.html
@@ -302,20 +302,20 @@
 </xml>
 
 
-  <script src="js_tools/vendor/jquery.js" charset="utf-8"></script>
-  <script src="js_tools/vendor/what-input.js" charset="utf-8"></script>
-  <script src="js_tools/vendor/foundation.min.js" charset="utf-8"></script>
+  <script src="js_tools/vendor/jquery.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/vendor/what-input.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/vendor/foundation.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript">$(document).foundation();</script>
-  <script src="js_tools/katex/katex.min.js" charset="utf-8"></script>
+  <script src="js_tools/katex/katex.min.js" type="text/javascript" charset="utf-8"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script> -->
-  <script src="js_tools/quill/highlight.js-master/src/highlight.js" charset="utf-8"></script>
-  <script src="js_tools/html2canvas.js" charset="utf-8"></script>
-  <script src="js_tools/blockly/blockly_compressed.js" charset="utf-8"></script>
-  <script src="js_tools/blockly/blocks_compressed.js" charset="utf-8"></script>
-  <script src="js_tools/blockly/msg/js/fr.js" charset="utf-8"></script>
-  <script src="src/BlocklyWIMS/msg/js/fr.js" charset="utf-8"></script>
-  <script src="js_tools/quill/quill.min.js" charset="utf-8"></script>
-  <script src="laruche.min.js" charset="utf-8"></script>
+  <script src="js_tools/quill/highlight.js-master/src/highlight.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/html2canvas.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/blockly/blockly_compressed.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/blockly/blocks_compressed.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/blockly/msg/js/fr.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/BlocklyWIMS/msg/js/fr.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/quill/quill.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="laruche.min.js" type="text/javascript" charset="utf-8"></script>
   <!-- <script src="src/ImageVariable.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/LatexImage.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/AnswerImage.js" type="text/javascript" charset="utf-8"></script>
