--- a/LaRuche/index.html
+++ b/LaRuche/index.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="large-3 card">
                   <div class="card-divider">
-                    Variables 
+                    Variables
                   </div>
                   <div class="card-section" id="card_Enonce_Variable">
                     <!--Rajouter une fonction javascript pour afficher toutes les variables -->
@@ -312,11 +312,11 @@
   <script src="js_tools/html2canvas.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/blockly/blockly_compressed.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/blockly/blocks_compressed.js" type="text/javascript" charset="utf-8"></script>
-  <script src="js_tools/blockly/msg/js/en.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/BlocklyWIMS/msg/js/en.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js_tools/blockly/msg/js/fr.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/BlocklyWIMS/msg/js/fr.js" type="text/javascript" charset="utf-8"></script>
   <script src="js_tools/quill/quill.min.js" type="text/javascript" charset="utf-8"></script>
   <!--<script src="laruche.min.js" type="text/javascript" charset="utf-8"></script>-->
-  <<script src="src/ImageVariable.js" type="text/javascript" charset="utf-8"></script>
+  <script src="src/ImageVariable.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/LatexImage.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/AnswerImage.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/Variable.js" type="text/javascript" charset="utf-8"></script>
@@ -332,6 +332,6 @@
   <script src="src/BlocklyWIMS/OEF/BlocklyWIMSBlocks.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/BlocklyCustom.js" type="text/javascript" charset="utf-8"></script>
   <script src="src/BlocklyWIMS/SProgramEditor.js" type="text/javascript" charset="utf-8"></script>
-  <script src="src/app.js" type="text/javascript" charset="utf-8"></script> 
+  <script src="src/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
